others/app-routing/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-app-ingress2
  namespace: network-app
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - backend:
              service:
                name: network-app-internal-cip-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
